updated all file changes

--- a/shoppy.css
+++ b/shoppy.css
@@ -63,10 +63,13 @@ ul li a.active {
 .main {
     display: flex;
     justify-content: center;
-    margin-top: 154px;
+    padding-top: 154px;
     flex-wrap: wrap;
+    background:url('asstes/img/backgr.png') repeat top left;
 }
-
+.shop {
+    background-color: #fff1dc;
+}
 .mainText {
     margin-top: 22px;
 }
